--- a/index.html
+++ b/index.html
@@ -853,54 +853,58 @@ footer{
   </div>
 </section>
 
-<section id="cv" class="section">
-  <div class="content">
-    <h2 class="fade-up" data-i18n="cv_title">Currículum Vitae</h2>
+<div class="cv-details fade-up delay-2">
 
-    <p class="fade-up delay-1" data-i18n="cv_description">
-      Aquí podrás ver una descripción general de mi trayectoria académica y profesional. He adquirido una experiencia valiosa tanto en el ámbito académico como en el mundo real, enfrentando retos de diseño innovadores.
-    </p>
-
-    <div class="cv-details fade-up delay-2">
-      <div class="cv-column">
-        <h3>Educación</h3>
-        <ul>
-          <li>
-            <strong>Universidad Politécnica de Valencia</strong><br>
-            <span>Grado en Diseño Industrial (2022-2026)</span>
-          </li>
-          <li>
-            <strong>Formación Profesional en Electricidad</strong><br>
-            <span>Formación técnica en el sector eléctrico, que me ha proporcionado una sólida base técnica.</span>
-          </li>
-        </ul>
-      </div>
-
-      <div class="cv-column">
-        <h3>Experiencia Profesional</h3>
-        <ul>
-          <li>
-            <strong>Prácticas en Sixay</strong><br>
-            <span>Diseño de mobiliario personalizado y gestión de proyectos en una empresa de diseño líder.</span>
-          </li>
-          <li>
-            <strong>Freelance</strong><br>
-            <span>Desarrollo de proyectos de diseño de productos para clientes individuales, con enfoque en la funcionalidad y la estética.</span>
-          </li>
-        </ul>
-      </div>
-
-      <div class="cv-column">
-        <h3>Habilidades Técnicas</h3>
-        <ul>
-          <li><i class="fas fa-cogs"></i> Diseño asistido por computadora (CAD)</li>
-          <li><i class="fas fa-3d"></i> Impresión 3D y prototipado rápido</li>
-          <li><i class="fas fa-pen"></i> Modelado 3D y renderizado</li>
-        </ul>
-      </div>
-    </div>
+  <!-- EDUCACIÓN -->
+  <div class="cv-column">
+    <h3>Educación</h3>
+    <ul>
+      <li>
+        <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
+        <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
+      </li>
+      <li>
+        <strong>Universitat Jaume I de Castellón (UJI)</strong><br>
+        <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
+      </li>
+      <li>
+        <strong>Escuelas San José de Valencia</strong><br>
+        <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
+      </li>
+    </ul>
   </div>
-</section>
+
+  <!-- EXPERIENCIA EN PRÁCTICAS -->
+  <div class="cv-column">
+    <h3>Prácticas Profesionales</h3>
+    <ul>
+      <li>
+        <strong>Sixay · Empresa de diseño de mobiliario</strong><br>
+        <span>Prácticas en diseño industrial y desarrollo de mobiliario a medida. Participación en diseño, definición técnica y fabricación de producto.</span>
+      </li>
+      <li>
+        <strong>Elecnor</strong><br>
+        <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias. Soporte técnico y mantenimiento preventivo.</span>
+      </li>
+      <li>
+        <strong>Autrial</strong><br>
+        <span>Prácticas como montador de cuadros eléctricos. Mantenimiento preventivo y correctivo de instalaciones eléctricas.</span>
+      </li>
+    </ul>
+  </div>
+
+  <!-- PERFIL TÉCNICO -->
+  <div class="cv-column">
+    <h3>Perfil Técnico</h3>
+    <ul>
+      <li><i class="fas fa-cogs"></i> Base técnica sólida en electricidad y automatización</li>
+      <li><i class="fas fa-drafting-compass"></i> Formación en diseño industrial y desarrollo de producto</li>
+      <li><i class="fas fa-3d"></i> Interés y práctica en impresión 3D y prototipado</li>
+    </ul>
+  </div>
+
+</div>
+
 
 <section id="skills" class="section">
   <div class="content">
