--- a/index.html
+++ b/index.html
@@ -853,8 +853,8 @@ footer{
   </div>
 </section>
 
+<section id="cv" class="section">
 <div class="cv-details fade-up delay-2">
-
   <!-- EDUCACIÓN -->
   <div class="cv-column">
     <h3>Educación</h3>
@@ -904,7 +904,7 @@ footer{
   </div>
 
 </div>
-
+</section>
 
 <section id="skills" class="section">
   <div class="content">
