--- a/index.html
+++ b/index.html
@@ -854,57 +854,63 @@ footer{
 </section>
 
 <section id="cv" class="section">
-<div class="cv-details fade-up delay-2">
-  <!-- EDUCACIÓN -->
-  <div class="cv-column">
-    <h3>Educación</h3>
-    <ul>
-      <li>
-        <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
-        <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
-      </li>
-      <li>
-        <strong>Universitat Jaume I de Castellón (UJI)</strong><br>
-        <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
-      </li>
-      <li>
-        <strong>Escuelas San José de Valencia</strong><br>
-        <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
-      </li>
-    </ul>
-  </div>
+  <div class="content">
 
-  <!-- EXPERIENCIA EN PRÁCTICAS -->
-  <div class="cv-column">
-    <h3>Prácticas Profesionales</h3>
-    <ul>
-      <li>
-        <strong>Sixay · Empresa de diseño de mobiliario</strong><br>
-        <span>Prácticas en diseño industrial y desarrollo de mobiliario a medida. Participación en diseño, definición técnica y fabricación de producto.</span>
-      </li>
-      <li>
-        <strong>Elecnor</strong><br>
-        <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias. Soporte técnico y mantenimiento preventivo.</span>
-      </li>
-      <li>
-        <strong>Autrial</strong><br>
-        <span>Prácticas como montador de cuadros eléctricos. Mantenimiento preventivo y correctivo de instalaciones eléctricas.</span>
-      </li>
-    </ul>
-  </div>
+    <h2 class="fade-up" data-i18n="cv_title">Currículum Vitae</h2>
 
-  <!-- PERFIL TÉCNICO -->
-  <div class="cv-column">
-    <h3>Perfil Técnico</h3>
-    <ul>
-      <li><i class="fas fa-cogs"></i> Base técnica sólida en electricidad y automatización</li>
-      <li><i class="fas fa-drafting-compass"></i> Formación en diseño industrial y desarrollo de producto</li>
-      <li><i class="fas fa-3d"></i> Interés y práctica en impresión 3D y prototipado</li>
-    </ul>
-  </div>
+    <div class="cv-details fade-up delay-2">
+      <!-- EDUCACIÓN -->
+      <div class="cv-column">
+        <h3>Educación</h3>
+        <ul>
+          <li>
+            <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
+            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
+          </li>
+          <li>
+            <strong>Universitat Jaume I de Castellón (UJI)</strong><br>
+            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
+          </li>
+          <li>
+            <strong>Escuelas San José de Valencia</strong><br>
+            <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
+          </li>
+        </ul>
+      </div>
 
-</div>
+      <!-- PRÁCTICAS -->
+      <div class="cv-column">
+        <h3>Prácticas Profesionales</h3>
+        <ul>
+          <li>
+            <strong>Sixay · Empresa de diseño de mobiliario</strong><br>
+            <span>Diseño industrial y desarrollo de mobiliario a medida. Participación en diseño, definición técnica y fabricación.</span>
+          </li>
+          <li>
+            <strong>Elecnor</strong><br>
+            <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias.</span>
+          </li>
+          <li>
+            <strong>Autrial</strong><br>
+            <span>Montaje y mantenimiento de cuadros eléctricos e instalaciones.</span>
+          </li>
+        </ul>
+      </div>
+
+      <!-- PERFIL -->
+      <div class="cv-column">
+        <h3>Perfil Técnico</h3>
+        <ul>
+          <li><i class="fas fa-cogs"></i> Base técnica sólida en electricidad y automatización</li>
+          <li><i class="fas fa-drafting-compass"></i> Formación en diseño industrial y desarrollo de producto</li>
+          <li><i class="fas fa-3d"></i> Impresión 3D y prototipado</li>
+        </ul>
+      </div>
+    </div>
+
+  </div>
 </section>
+
 
 <section id="skills" class="section">
   <div class="content">
