--- a/index.html
+++ b/index.html
@@ -812,6 +812,15 @@ footer{
   }
 }
 
+/* ===== CV – DESPLAZAR PRÁCTICAS ===== */
+
+#cv .cv-column:nth-child(2){
+  padding-left: 48px;      /* mueve el contenido */
+}
+
+#cv .cv-column:nth-child(2)::before{
+  left: 26px;              /* recoloca la línea vertical */
+}
 
   
 </style>
