--- a/index.html
+++ b/index.html
@@ -978,47 +978,56 @@ footer{
   </div>
 </section>
 
-<div class="cv-details cv-vertical fade-up delay-2">
+<section id="cv" class="section">
+  <div class="content">
 
-  <!-- FORMACIÓN -->
-  <div class="cv-block">
-    <h3>Formación académica</h3>
-    <ul>
-      <li>
-        <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
-        <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
-      </li>
-      <li>
-        <strong>Universitat Jaume I de Castellón (UJI)</strong><br>
-        <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
-      </li>
-      <li>
-        <strong>Escuelas San José de Valencia</strong><br>
-        <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
-      </li>
-      <li>
-        <strong>Escuelas San José de Valencia</strong><br>
-        <span>Grado Medio en Instalaciones Eléctricas y Automáticas · 2017 – 2019</span>
-      </li>
-    </ul>
+    <h2 class="fade-up" data-i18n="cv_title">Currículum Vitae</h2>
+
+    <div class="cv-details cv-vertical fade-up delay-2">
+
+      <!-- FORMACIÓN -->
+      <div class="cv-block">
+        <h3>Formación académica</h3>
+        <ul>
+          <li>
+            <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
+            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
+          </li>
+          <li>
+            <strong>Universitat Jaume I de Castellón (UJI)</strong><br>
+            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
+          </li>
+          <li>
+            <strong>Escuelas San José de Valencia</strong><br>
+            <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
+          </li>
+          <li>
+            <strong>Escuelas San José de Valencia</strong><br>
+            <span>Grado Medio en Instalaciones Eléctricas y Automáticas · 2017 – 2019</span>
+          </li>
+        </ul>
+      </div>
+
+      <!-- EXPERIENCIA -->
+      <div class="cv-block">
+        <h3>Prácticas profesionales</h3>
+        <ul>
+          <li>
+            <strong>Elecnor</strong><br>
+            <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias.</span>
+          </li>
+          <li>
+            <strong>Autrial</strong><br>
+            <span>Montaje y mantenimiento de cuadros eléctricos e instalaciones eléctricas.</span>
+          </li>
+        </ul>
+      </div>
+
+    </div>
+
   </div>
+</section>
 
-  <!-- EXPERIENCIA -->
-  <div class="cv-block">
-    <h3>Prácticas profesionales</h3>
-    <ul>
-      <li>
-        <strong>Elecnor</strong><br>
-        <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias.</span>
-      </li>
-      <li>
-        <strong>Autrial</strong><br>
-        <span>Montaje y mantenimiento de cuadros eléctricos e instalaciones eléctricas.</span>
-      </li>
-    </ul>
-  </div>
-
-</div>
 
 
 <section id="skills" class="section">
