--- a/index.html
+++ b/index.html
@@ -990,20 +990,20 @@ footer{
         <h3>Formación académica</h3>
         <ul>
           <li>
-            <strong>Universidad Politécnica de Valencia (UPV)</strong><br>
-            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
+            <strong>Universidad Politécnica de Valencia (UPV)</strong>
+            <span> · Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
           </li>
           <li>
-            <strong>Universitat Jaume I de Castellón (UJI)</strong><br>
-            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
+            <strong>Universitat Jaume I de Castellón (UJI)</strong>
+            <span> · Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
           </li>
           <li>
-            <strong>Escuelas San José de Valencia</strong><br>
-            <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
+            <strong>Escuelas San José de Valencia</strong>
+            <span> · Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
           </li>
           <li>
-            <strong>Escuelas San José de Valencia</strong><br>
-            <span>Grado Medio en Instalaciones Eléctricas y Automáticas · 2017 – 2019</span>
+            <strong>Escuelas San José de Valencia</strong>
+            <span> · Grado Medio en Instalaciones Eléctricas y Automáticas · 2017 – 2019</span>
           </li>
         </ul>
       </div>
@@ -1013,12 +1013,12 @@ footer{
         <h3>Prácticas profesionales</h3>
         <ul>
           <li>
-            <strong>Elecnor</strong><br>
-            <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias.</span>
+            <strong>Elecnor</strong>
+            <span> · Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias</span>
           </li>
           <li>
-            <strong>Autrial</strong><br>
-            <span>Montaje y mantenimiento de cuadros eléctricos e instalaciones eléctricas.</span>
+            <strong>Autrial</strong>
+            <span> · Montaje y mantenimiento de cuadros eléctricos e instalaciones eléctricas</span>
           </li>
         </ul>
       </div>
@@ -1027,6 +1027,7 @@ footer{
 
   </div>
 </section>
+
 
 
 
