--- a/index.html
+++ b/index.html
@@ -991,19 +991,19 @@ footer{
         <ul>
           <li>
             <strong>Universidad Politécnica de Valencia (UPV)</strong>
-            <span> · Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
+            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2024 – Actualidad</span>
           </li>
           <li>
             <strong>Universitat Jaume I de Castellón (UJI)</strong>
-            <span> · Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
+            <span>Grado en Ingeniería en Diseño Industrial y Desarrollo de Productos · 2021 – 2024</span>
           </li>
           <li>
             <strong>Escuelas San José de Valencia</strong>
-            <span> · Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
+            <span>Grado Superior en Instalaciones Electrotécnicas y Automatizadas · 2019 – 2021</span>
           </li>
           <li>
             <strong>Escuelas San José de Valencia</strong>
-            <span> · Grado Medio en Instalaciones Eléctricas y Automáticas · 2017 – 2019</span>
+            <span>Grado Medio en Instalaciones Eléctricas y Automáticas · 2017 – 2019</span>
           </li>
         </ul>
       </div>
@@ -1014,11 +1014,11 @@ footer{
         <ul>
           <li>
             <strong>Elecnor</strong>
-            <span> · Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias</span>
+            <span>Prácticas de mantenimiento de equipos eléctricos en instalaciones universitarias</span>
           </li>
           <li>
             <strong>Autrial</strong>
-            <span> · Montaje y mantenimiento de cuadros eléctricos e instalaciones eléctricas</span>
+            <span>Montaje y mantenimiento de cuadros eléctricos e instalaciones eléctricas</span>
           </li>
         </ul>
       </div>
@@ -1027,6 +1027,7 @@ footer{
 
   </div>
 </section>
+
 
 
 
