--- a/index.html
+++ b/index.html
@@ -899,6 +899,12 @@ footer{
   display: none;
 }
 
+/* ===== CV – AJUSTE POSICIÓN DE PUNTOS ===== */
+
+.cv-block li::before{
+  left: -38px;   /* antes estaba más cerca */
+}
+
   
 </style>
 </head>
