--- a/index.html
+++ b/index.html
@@ -905,6 +905,12 @@ footer{
   left: -30px;   /* antes estaba más cerca */
 }
 
+/* ===== CV – ELIMINAR PUNTO DEFINITIVAMENTE ===== */
+
+#cv li::before{
+  display: none !important;
+}
+
   
 </style>
 </head>
