--- a/index.html
+++ b/index.html
@@ -907,9 +907,12 @@ footer{
 
 /* ===== CV – ELIMINAR PUNTO DEFINITIVAMENTE ===== */
 
+/* ELIMINAR TODOS LOS PUNTOS DEL CV */
 #cv li::before{
+  content: none !important;
   display: none !important;
 }
+
 
   
 </style>
