--- a/index.html
+++ b/index.html
@@ -897,11 +897,19 @@ footer{
   background:#fff;
 }
 
-/* ===== CV – ELIMINAR TODOS LOS PUNTOS ===== */
-#cv *::before{
-  content: none !important;
-  display: none !important;
+/* ===== CV – QUITAR BULLETS NATIVOS ===== */
+#cv ul{
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
 }
+
+
+
+
+
+
+
 
   
 </style>
