--- a/index.html
+++ b/index.html
@@ -885,17 +885,7 @@ footer{
   padding-left: 24px;
 }
 
-#cv .cv-block h3::before{
-  content:"";
-  position:absolute;
-  left:0;
-  top:50%;
-  transform: translateY(-50%);
-  width:7px;
-  height:7px;
-  border-radius:50%;
-  background:#fff;
-}
+
 
 /* ===== CV – QUITAR BULLETS NATIVOS ===== */
 #cv ul{
@@ -904,6 +894,11 @@ footer{
   margin-left: 0;
 }
 
+/* ===== CV – ELIMINAR PUNTO EN TÍTULOS ===== */
+#cv .cv-block h3::before{
+  content: none !important;
+  display: none !important;
+}
 
 
 
