--- a/index.html
+++ b/index.html
@@ -900,6 +900,11 @@ footer{
   display: none !important;
 }
 
+/* ===== CV – TÍTULOS UN POCO MÁS GRANDES ===== */
+#cv .cv-block h3{
+  font-size: 14px;      /* antes 12px */
+  letter-spacing: .18em; /* un pelín menos para que respire */
+}
 
 
 
