--- a/index.html
+++ b/index.html
@@ -906,6 +906,10 @@ footer{
   letter-spacing: .18em; /* un pelín menos para que respire */
 }
 
+/* ===== CV – ALINEAR TÍTULOS CON CONTENIDO ===== */
+#cv .cv-block h3{
+  padding-left: 0;
+}
 
 
 
