--- a/index.html
+++ b/index.html
@@ -911,6 +911,18 @@ footer{
   padding-left: 0;
 }
 
+/* ===== CV – ALINEAR TODO EN EL MISMO EJE ===== */
+
+#cv .content{
+  padding-left: 0;
+}
+
+#cv h2,
+#cv .cv-block h3,
+#cv .cv-block ul{
+  margin-left: 0;
+  padding-left: 0;
+}
 
 
 
