--- a/index.html
+++ b/index.html
@@ -924,6 +924,10 @@ footer{
   padding-left: 0;
 }
 
+/* ===== CV – REDUCIR GROSOR DE UNIVERSIDADES ===== */
+#cv .cv-block strong{
+  font-weight: 500; /* antes 600–700 */
+}
 
 
 
