--- a/index.html
+++ b/index.html
@@ -929,6 +929,19 @@ footer{
   font-weight: 500; /* antes 600–700 */
 }
 
+/* ===== CV – ALINEACIÓN TOTAL A LA IZQUIERDA ===== */
+
+/* Reset completo de sangrías internas */
+#cv .content,
+#cv .cv-details,
+#cv .cv-block,
+#cv h2,
+#cv h3,
+#cv ul,
+#cv li{
+  margin-left: 0 !important;
+  padding-left: 0 !important;
+}
 
 
   
