--- a/index.html
+++ b/index.html
@@ -943,6 +943,17 @@ footer{
   padding-left: 0 !important;
 }
 
+/* ===== CV – ALINEAR TODO AL EJE DE .CONTENT ===== */
+
+/* Quitamos desplazamientos internos SOLO del CV */
+#cv .cv-details,
+#cv .cv-block,
+#cv h3,
+#cv ul,
+#cv li{
+  margin-left: 0;
+  padding-left: 0;
+}
 
   
 </style>
