--- a/index.html
+++ b/index.html
@@ -874,9 +874,7 @@ footer{
 
 /* ===== CV – ELIMINAR LÍNEA ===== */
 
-#cv .cv-block::before{
-  display: none;
-}
+
 
 /* ===== CV – PUNTO ALINEADO CON TÍTULO ===== */
 
@@ -953,6 +951,27 @@ footer{
 #cv li{
   margin-left: 0;
   padding-left: 0;
+}
+
+  /* ===== CV – COMPORTARSE COMO EL RESTO DE SECCIONES ===== */
+
+#cv .cv-details{
+  margin-top: 15px;
+}
+
+#cv .cv-block{
+  padding-left: 0;
+}
+
+#cv ul{
+  list-style: none;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+#cv li{
+  padding-left: 0;
+  margin-left: 0;
 }
 
   
