--- a/index.html
+++ b/index.html
@@ -974,6 +974,23 @@ footer{
   margin-left: 0;
 }
 
+  /* ===== CV – MISMO MARGEN IZQUIERDO QUE EL RESTO ===== */
+
+/* NO tocar .content: es el eje maestro */
+#cv .content{
+  padding-left: 0;
+}
+
+/* Eliminar cualquier desplazamiento interno del CV */
+#cv .cv-details,
+#cv .cv-block,
+#cv h3,
+#cv ul,
+#cv li{
+  margin-left: 0;
+  padding-left: 0;
+}
+
   
 </style>
 </head>
